fixed strange padding around palette strip image on mobile (display: block)

--- a/css/modal-styles.css
+++ b/css/modal-styles.css
@@ -142,6 +142,7 @@
 }
 
 .image-container > img {
+	display: block;
 	width: 100%;
 }
 
